fix availability item image on safari

--- a/src/components/DynamicProfileComponents/AvailabilityProfileComponent/AvailabilityListItem/style.module.scss
+++ b/src/components/DynamicProfileComponents/AvailabilityProfileComponent/AvailabilityListItem/style.module.scss
@@ -1,5 +1,9 @@
 @import '../../../../styles/variables.scss';
 
+.availabilityItem {
+  max-height: 115px;
+}
+
 .availabilityImageContainer {
   height: 100%;
   position: relative;
